Коммит с отлаженным первыми сервисами и ДТО